reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_tuple.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_schema::<TestStructWithTuple>()"
---
{
  "name": "",
  "functions": [
    {
      "name": "",
      "input_type": {
        "name": "reflect_demo::tests::basic::TestStructWithTuple"
      },
      "output_type": {
        "name": "reflect_demo::tests::basic::TestStructWithTuple"
      },
      "serialization": [
        "json"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithTuple",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::tuple::Tuple2",
              "parameters": [
                {
                  "name": "u8"
                },
                {
                  "name": "std::string::String"
                }
              ]
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "std::tuple::Tuple2",
        "description": "Tuple holding 2 elements",
        "parameters": [
          {
            "name": "T1"
          },
          {
            "name": "T2"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithTuple",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::tuple::Tuple2",
              "parameters": [
                {
                  "name": "u8"
                },
                {
                  "name": "std::string::String"
                }
              ]
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "std::tuple::Tuple2",
        "description": "Tuple holding 2 elements",
        "parameters": [
          {
            "name": "T1"
          },
          {
            "name": "T2"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
