reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_tuple12_input.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructWithTuple12::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructWithTuple12"
  },
  {
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithTuple12",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::tuple::Tuple12",
              "parameters": [
                {
                  "name": "u8"
                },
                {
                  "name": "std::string::String"
                },
                {
                  "name": "u8"
                },
                {
                  "name": "std::string::String"
                },
                {
                  "name": "u8"
                },
                {
                  "name": "std::string::String"
                },
                {
                  "name": "u8"
                },
                {
                  "name": "std::string::String"
                },
                {
                  "name": "u8"
                },
                {
                  "name": "std::string::String"
                },
                {
                  "name": "u8"
                },
                {
                  "name": "std::string::String"
                }
              ]
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "std::tuple::Tuple12",
        "description": "Tuple holding 12 elements",
        "parameters": [
          {
            "name": "T1"
          },
          {
            "name": "T2"
          },
          {
            "name": "T3"
          },
          {
            "name": "T4"
          },
          {
            "name": "T5"
          },
          {
            "name": "T6"
          },
          {
            "name": "T7"
          },
          {
            "name": "T8"
          },
          {
            "name": "T9"
          },
          {
            "name": "T10"
          },
          {
            "name": "T11"
          },
          {
            "name": "T12"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
]
