reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_tuple_output.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructWithTuple::reflect_output()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructWithTuple"
  },
  {
    "name": "",
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithTuple",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::tuple::Tuple2",
              "parameters": [
                {
                  "name": "u8"
                },
                {
                  "name": "std::string::String"
                }
              ]
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "std::tuple::Tuple2",
        "description": "Tuple holding 2 elements",
        "parameters": [
          {
            "name": "T1"
          },
          {
            "name": "T2"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
]
